--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "nodemailer": "^6.3.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-typist": "^2.0.5",
     "reactjs-popup": "^1.5.0"
   },
   "scripts": {
