--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gmail-send": "^1.8.10",
     "nodemailer": "^6.3.0",
     "react": "^16.9.0",
+    "react-animations": "^1.0.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.9.0",
     "react-responsive-carousel": "^3.1.50",
