--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "gmail-send": "^1.8.10",
     "nodemailer": "^6.3.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-animations": "^1.0.0",
     "react-coverflow": "^0.2.20",
@@ -12,8 +13,10 @@
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-typing-animation": "^1.6.2",
     "react-typist": "^2.0.5",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
