--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-animations": "^1.0.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.9.0",
+    "react-flickity-component": "^3.3.1",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
