changes to the about page slider

--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "gmail-send": "^1.8.10",
     "nodemailer": "^6.3.0",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.22.0",
     "react": "^16.9.0",
     "react-animations": "^1.0.0",
+    "react-cover-carousel": "0.0.5",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.9.0",
     "react-flickity-component": "^3.3.1",
+    "react-photo-gallery": "^8.0.0",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
