--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.9.0",
     "react-flickity-component": "^3.3.1",
+    "react-pdf": "^4.1.0",
     "react-photo-gallery": "^8.0.0",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.0.1",
